# obsidian-mcp-server

./: .env.example  .forbidden_paths  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  VSCODE_CONFIG_SUMMARY.md  afp.json  diagnose.py  main.py  obsidian_mcp_server.py  pyproject.toml  setup.sh  test_basic.py
.agent/skills/docs-updater/: SKILL.md
.agent/skills/git-workflow/: SKILL.md
.agent/skills/mcp-developer/: SKILL.md
.agent/skills/python-patterns/: SKILL.md
.agent/skills/refactoring/: SKILL.md
.agent/skills/test-runner/: SKILL.md
.agent/workflows/: dev-server.md  quality-check.md  quick-push.md
.agents/skills/code-quality/: SKILL.md
.agents/skills/docs-updater/: SKILL.md
.agents/skills/knowledge-extractor/: SKILL.md
.agents/skills/knowledge-extranctor/: SKILL.md
.agents/skills/mcp-developer/: SKILL.md
.agents/skills/refactoring/: SKILL.md
.agents/workflows/: debug-tests.md  new-tool.md
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: beta_feedback.yml  bug_report.yml  installation_help.yml
.github/workflows/: ci.yml  codeql.yml
docs/: FUTURE.md  agent-feedback.md  agent-folder-setup.md  agent-quickstart.md  architecture.md  configuration.md  index.md  installation.md  release-checklist.md  semantic-search.md  tool-reference.md  troubleshooting.md
docs/agent-feedback/: 2026-05-17-recommendations.md
docs/examples/: REGLAS_GLOBALES-example.md  SKILL-writer-example.md
docs/superpowers/plans/: 2026-03-24-editar-nota-partial-edit.md  2026-03-28-canvas-integration.md  2026-04-04-mcp-rule-enforcement.md  2026-06-14-public-packaging-standardization.md
docs/superpowers/specs/: 2026-03-24-editar-nota-partial-edit-design.md  2026-03-28-canvas-integration-design.md  2026-04-04-mcp-rule-enforcement-design.md
mcpb/: manifest.json
mcpb/server/: obsidian_mcp_server.py
obsidian_mcp/: __init__.py  config.py  constants.py  messages.py  middleware.py  result.py  server.py  vault_config.py
obsidian_mcp/canvas/: __init__.py  canvas_logic.py  canvas_tools.py  engine.py  models.py  workflow_logic.py  workflow_tool_logic.py  workflow_tools.py
obsidian_mcp/models/: __init__.py  responses.py  tool_inputs.py
obsidian_mcp/prompts/: __init__.py  assistant.py  core.py  packs.py  profiles.py
obsidian_mcp/resources/: __init__.py  profile.py  vault_info.py
obsidian_mcp/semantic/: indexer.py  metadata_tracker.py  retriever.py  service.py
obsidian_mcp/tools/: __init__.py  agents.py  agents_generator.py  agents_logic.py  analysis.py  analysis_logic.py  context.py  context_logic.py  creation.py  creation_logic.py  graph.py  graph_logic.py  navigation.py  navigation_logic.py  obsidianrag.py  registry.py  semantic.py  semantic_logic.py  youtube.py  youtube_logic.py
obsidian_mcp/utils/: __init__.py  logging.py  mcp_ignore.py  security.py  timeout.py  vault.py  wikilinks.py
packaging/mcpb/: manifest.template.json
scripts/: batch_integrate_journal.py  build_mcpb.py  diagnose.py  diagnose_backup.py  setup.sh  vault_analytics.py  verify_ignore.py  verify_youtube.py
tests/: __init__.py  conftest.py  kanvas-prueba.canvas  test_afp_dogfood_regressions.py  test_agents.py  test_agents_generator.py  test_basic.py  test_confirmation_flow.py  test_connection_logic.py  test_create_note.py  test_dev_commands_contract.py  test_edit_note.py  test_image_indexing.py  test_lint_vault.py  test_list_notes_pagination.py  test_middleware.py  test_models.py  test_normalize_frontmatter.py  test_profile_prompts_resources.py  test_public_distribution_contract.py  test_quick_capture.py  test_security.py  test_tool_registry_contract.py  test_vault_utils.py  test_wikilink_tools.py  test_wikilinks.py
tests/canvas/: conftest.py  test_canvas_logic.py  test_engine.py  test_integration.py  test_models.py  test_workflow_logic.py  test_workflow_tools.py
