[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-mcp-server"
version = "1.0.0"
description = "MCP server for working with Obsidian vaults"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["obsidian", "mcp", "claude", "knowledge-management", "notes"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Office/Business :: Groupware"
]
dependencies = [
    "aiofiles>=25.1.0",
    "fastmcp>=3.2.0",
    "pathspec>=1.1.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.1.1",
    "tqdm>=4.68.1",
    "youtube-transcript-api>=1.2.3",
    "PyYAML>=6.0.0",
    "cryptography>=46.0.7",
    "pygments>=2.20.0",
    "pyjwt>=2.13.0",
    "requests>=2.33.1",
]

[project.optional-dependencies]
# Deprecated: this extra powers the legacy in-process semantic tools. Prefer
# the `obsidianrag` tool set, which delegates RAG to the external ObsidianRAG
# service without embedding a second RAG stack in this MCP server.
rag = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-chroma>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-classic>=1.0.7",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0,<1.0.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
]

[project.scripts]
obsidian-mcp-server = "obsidian_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "anyio>=4.4.0",
    "ruff>=0.15.10",
    "pyright>=1.1.372",
    "mypy>=1.19.1",
    "types-PyYAML>=6.0.12.20260408",
    "types-aiofiles>=25.1.0.20260409",
    "matplotlib>=3.10.8",
    "numpy>=2.4.6",
    "pre-commit>=4.0.0",
    "pylint>=4.0.5",
    "bandit[toml]>=1.8.0",
    "pip-audit>=2.10.0",
    # uv seeds the dev venv with pip; pin >=26.1.2 to clear PYSEC-2026-196
    # (the 26.1.1 seed otherwise fails the pip-audit pre-commit hook).
    "pip>=26.1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["obsidian_mcp"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[[tool.mypy.overrides]]
module = [
    "chromadb",
    "langchain",
    "langchain_chroma",
    "langchain_classic.*",
    "langchain_community.*",
    "langchain_core.*",
    "langchain_huggingface",
    "langchain_ollama",
    "langchain_text_splitters",
    "numpy",
]
ignore_missing_imports = true

[tool.pyright]
include = ["obsidian_mcp"]
exclude = [".venv", "**/__pycache__", ".git", ".ruff_cache", ".pytest_cache", "tests", "scripts", "obsidian_mcp/semantic"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
reportUnusedFunction = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.pylint.MAIN]
# Exclude semantic module: it uses optional RAG dependencies that are not always installed.
ignore = ["semantic"]
persistent = false

[tool.pylint."MESSAGES CONTROL"]
# R0801 duplicate-code: se va a refactorizar por separado
# C0301 line-too-long: lo gestiona ruff
# W1203 logging-fstring-interpolation: se prefiere f-strings en este proyecto
# E1101 no-member: falsos positivos frecuentes con modelos Pydantic
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "C0301",  # line-too-long (ruff)
    "C0415",  # import-outside-toplevel: intentional in import tests
    "R0801",  # duplicate-code (pendiente refactor)
    "R0903",  # too-few-public-methods: test helper classes are intentionally small
    "E1101",  # no-member
    "W0613",  # unused-argument: falso positivo con fixtures de pytest
    "W0621",  # redefined-outer-name: falso positivo con fixtures de pytest
    "W1203",  # logging-fstring-interpolation
    "R0917",  # too-many-positional-arguments: max-args=8 already covers this limit
]

[tool.pylint.DESIGN]
max-args = 8
max-locals = 20
max-returns = 8
max-branches = 15
max-statements = 60
max-nested-blocks = 7
